--- a/package.json
+++ b/package.json
@@ -1,25 +1,33 @@
 {
-  "name": "instant-js-app-boilerplate",
+  "name": "webpack-set-up",
   "version": "1.0.0",
-  "description": "A JS app boilerplate to instantly test or prototype something using webpack-dev-server and html-webpack-plugin with minimum configs",
-  "main": "webpack.config.js",
+  "description": "A simple Webpack boilerplate used to bundle JavaScript.",
+  "private": true,
   "scripts": {
-    "start": "webpack serve",
-    "lint": "eslint src",
-    "lint:fix": "eslint src --fix",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "NODE_ENV=production webpack"
+    "start": "webpack serve --open",
+    "build": "webpack"
   },
-  "devDependencies": {
-    "eslint": "^7.26.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.23.2",
-    "html-webpack-plugin": "^5.3.1",
-    "webpack": "^5.37.0",
-    "webpack-cli": "^4.7.0",
-    "webpack-dev-server": "^3.11.3"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Favourezeugwa/Webpack-Set-up.git"
   },
   "keywords": [],
-  "author": "mo@madmadi.me",
-  "license": "ISC"
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Favourezeugwa/Webpack-Set-up/issues"
+  },
+  "homepage": "https://github.com/Favourezeugwa/Webpack-Set-up#readme",
+  "devDependencies": {
+    "css-loader": "^6.7.1",
+    "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.1"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
+  }
 }
