--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,31 +1,20 @@
 {
-    "extends": [
-        "stylelint-config-standard"
-    ],
-    "plugins": [
-        "stylelint-scss",
-        "stylelint-csstree-validator"
-    ],
+    "extends": ["stylelint-config-standard"],
+    "plugins": ["stylelint-scss", "stylelint-csstree-validator"],
     "rules": {
-        "at-rule-no-unknown": null,
-        "scss/at-rule-no-unknown": [
-            true,
-            {
-                "ignoreAtRules": [
-                    "tailwind",
-                    "apply",
-                    "variants",
-                    "responsive",
-                    "screen"
-                ]
-            }
-        ]
+      "at-rule-no-unknown": [
+        true,
+        {
+          "ignoreAtRules": ["tailwind", "apply", "variants", "responsive", "screen"]
+        }
+      ],
+      "scss/at-rule-no-unknown":  [
+        true,
+        {
+          "ignoreAtRules": ["tailwind", "apply", "variants", "responsive", "screen"]
+        }
+      ],
+      "csstree/validator": true
     },
-    "csstree/validator": true,
-    "ignoreFiles": [
-        "build/**",
-        "dist/**",
-        "**/reset*.css",
-        "**/bootstrap*.css"
-    ]
-}
+    "ignoreFiles": ["build/**", "dist/**", "**/reset*.css", "**/bootstrap*.css", "**/*.js", "**/*.jsx"]
+  }
