--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,20 +1,31 @@
 {
-    "extends": ["stylelint-config-standard"],
-    "plugins": ["stylelint-scss", "stylelint-csstree-validator"],
+    "extends": [
+        "stylelint-config-standard"
+    ],
+    "plugins": [
+        "stylelint-scss",
+        "stylelint-csstree-validator"
+    ],
     "rules": {
-      "at-rule-no-unknown": [
-        true,
-        {
-          "ignoreAtRules": ["tailwind", "apply", "variants", "responsive", "screen"]
-        }
-      ],
-      "scss/at-rule-no-unknown":  [
-        true,
-        {
-          "ignoreAtRules": ["tailwind", "apply", "variants", "responsive", "screen"]
-        }
-      ],
-      "csstree/validator": true
+        "at-rule-no-unknown": null,
+        "scss/at-rule-no-unknown": [
+            true,
+            {
+                "ignoreAtRules": [
+                    "tailwind",
+                    "apply",
+                    "variants",
+                    "responsive",
+                    "screen"
+                ]
+            }
+        ]
     },
-    "ignoreFiles": ["build/**", "dist/**", "**/reset*.css", "**/bootstrap*.css", "**/*.js", "**/*.jsx"]
-  }
+    "csstree/validator": true,
+    "ignoreFiles": [
+        "build/**",
+        "dist/**",
+        "**/reset*.css",
+        "**/bootstrap*.css"
+    ]
+}
