--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "webpack serve --open",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "start": "webpack serve --open"
   },
   "repository": {
     "type": "git",
@@ -20,14 +18,13 @@
   "bugs": {
     "url": "https://github.com/darikmohammed/TodoList-Webpack/issues"
   },
-  "homepage": "https://darikmohammed.github.io/TodoList-Webpack/",
+  "homepage": "https://github.com/darikmohammed/TodoList-Webpack#readme",
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "css-loader": "^6.7.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.26.0",
-    "gh-pages": "^4.0.0",
     "hint": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
@@ -41,7 +38,6 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
-    "lodash": "^4.17.21",
-    "sortablejs": "^1.15.0"
+    "lodash": "^4.17.21"
   }
 }
